<resources>
    <string name="app_name">EASJ Canteen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_contacts">ContactsActivity</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Enter password again</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login_autoLogin">Auto login</string>
    <string name="login_remember">Remember login</string>

    <string name="user_firstName">First name</string>
    <string name="user_lastName">Last name</string>
    <string name="user_photoUrl">Photo link(Optional)</string>
    <string name="user_submit">Create user</string>

    <string name="user_noURL">Photo link is not valid. Continue without image?</string>
    <string name="user_checkInput">Some inputs are not valid</string>

    <string name="user_title">User information</string>
</resources>
