<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mikkel.mandatory.activity.CreateNewCustomerActivity"
    android:padding="20dp">

    <EditText
        android:id="@+id/new_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_firstName"
        android:inputType="text"
        android:maxLines="1"
        android:layout_margin="1dp"/>

    <EditText
        android:id="@+id/new_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_lastName"
        android:inputType="text"
        android:maxLines="1"
        android:layout_margin="1dp"/>

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_margin="1dp"/>

    <EditText
        android:id="@+id/new_password_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_margin="1dp"/>

    <EditText
        android:id="@+id/new_password_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_repeat"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_margin="1dp"/>

    <EditText
        android:id="@+id/new_photo_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_photoUrl"
        android:maxLines="1"
        android:layout_margin="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/new_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkCustomer"
            android:text="@string/user_submit" />
    </LinearLayout>

</LinearLayout>
